# OTUS-C-Learning

./: .gitignore  README.md
Character_Encoding/: Makefile
Character_Encoding/resource/: iso-8859-5.txt
Character_Encoding/src/: chars.h
HW10_CRC32/: CMakeLists.txt  crc32_utils.c  crc32_utils.h  main.c
HW11_threads/: CMakeLists.txt
HW11_threads/src/: globals.h  hash.c  hash.h  main.c  threaddata.c  threaddata.h  utils.c  utils.h
HW12_telnet/: CMakeLists.txt  main.c  supported_fonts.h
HW14_db_Integration/: CMakeLists.txt  main.c
HW14_db_Integration/res/: oscar.sql
HW15_Cube/: CMakeLists.txt  main.c
HW17_FinishProject_Taxi/: CMakeLists.txt  README.md  config.txt  db_integration.c  db_integration.h  getter.c  main.c
HW17_FinishProject_Taxi/src/: db_config.c  db_config.h  db_integration.c  db_integration.h  getter.c  getter.h  globals.h  main.c  parser_json.c  parser_json.h  price.h
HW1_Rarjpeg_Reader/src/: main.c
HW2_Character_Encoding/resource/: cp1251.txt  koi8.txt
HW2_Character_Encoding/src/: chars.h  main.c  utils.c  utils.h
HW3_Hashmap/: CMakeLists.txt
HW3_Hashmap/src/: CMakeLists.txt  customhash.c  customhash.h  main.c
HW3_Hashmap/test/: test.txt  text.txt
HW4_Library/: CMakeLists.txt
HW4_Library/src/: getter.c  getter.h  main.c  parser_json.c  parser_json.h  weather.h
HW6_LOGGER/test/: CMakeLists.txt  main.c
HW7_ASM/: CMakeLists.txt  main.c  original.asm
HW8_POSIX/: diff2.txt
HW9_daemon/: CMakeLists.txt  daemon_stat.ini  daemon_stat.service  daemonize.c  daemonize.h  globals.h  main.c  utils.c  utils.h
Rarjpeg_Reader/: Makefile
Rarjpeg_Reader/src/: utils.c  utils.h  zipinfo.h
